# pyton-monorepo

./: .editorconfig  .gitignore  README.md  cspell.config.yaml  dictionary.txt  pyproject.toml
booking/pokemon_cafe/: main.py
booking/pokemon_cafe/sample_data/: calendar_element.txt  timetable_full.txt  timetable_has_seats.txt  席の予約.html
example/instructor/: zero_shot_instruction.ipynb
experimental/: face_recognition.ipynb  face_recognition.py  google_auth.py
llm/: base.py
llm/openai/: model.py  openai.py
llm_lecture_2024/: W3_Transformer_Language_Model.ipynb
llm_model/: base.py  openai.py
shared_module/: configuration.py
shared_module/prompt_template/: __init__.py  prompt_loader.py
simple_chat_console/: main.py
